[metadata]
name = bird-lg
url = https://github.com/sileht/bird-lg
summary = bird looking glass
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
home-page = https://github.com/sileht/bird-lg
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[extras]
test =
    gabbi>=1.21.0
    wsgi_intercept>=1.4.1
    hacking<0.11,>=0.10.0
    coverage>=3.6
    fixtures
    mock
    oslotest
    python-subunit>=0.0.18
    os-testr
    testrepository
    testtools>=0.9.38
    sphinx!=1.2.0,!=1.3b1,<1.3,>=1.1.2
    oslosphinx>=2.5.0 # Apache-2.0

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    bird_lg
data_files =
    etc/bird-lg = etc/bird-lg/*

[entry_points]
wsgi_scripts =
    bird-lg-api = bird_lg.lg:app
    bird-lg-proxy-api = bird_lg.lg_proxy:app


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
